--- a/css/style.css
+++ b/css/style.css
@@ -50,11 +50,11 @@
 .page-header-list {
     margin: 0;
     padding: 0;
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 .page-header-list-item {
     padding: 0 0 10px 20px;
-    box-sizing: border-box
+    box-sizing: border-box;
     list-style-type: none;
     position: relative;
 }
